# Shine

./: .gitmodules  README.md
concert/: .gitignore  .metadata  README.md  pubspec.yaml
concert/android/: build.gradle
concert/android/src/main/: AndroidManifest.xml
concert/lib/: concert.dart
concert/native/concert/: .gitignore  CMakeLists.txt
concert/native/concert/include/concert/: concert.h  export.h  export_aes.h  export_chacha20_poly1305.h  export_utils.h  export_zip.h
concert/native/concert/include/concert/internal/: aes.h  bit7z_loader.h  chacha20_poly1305.h  string_utils.h
concert/native/concert/include/concert/internal/utils/: file.h  string.h
concert/native/concert/include/concert/internal/zip/: code.h  compress.h  extract.h
concert/native/concert/src/: export_aes.cpp  export_chacha20_poly1305.cpp  export_utils.cpp  export_zip.cpp
concert/native/concert/src/internal/: aes.cpp  bit7z_loader.cpp  chacha20_poly1305.cpp  init.cpp  string_utils.cpp
concert/native/concert/src/internal/utils/: file.cpp  string.cpp
concert/native/concert/src/internal/zip/: compress.cpp  extract.cpp
concert/windows/: CMakeLists.txt  concert_plugin.cpp  concert_plugin.h  concert_plugin_c_api.cpp
concert/windows/test/: concert_plugin_test.cpp
shine/: .metadata  README.md  build.yaml  pubspec.yaml
shine/android/app/: build.gradle
shine/lib/: main.dart
shine/lib/common/: concert.dart  device_info.dart  dialogs.dart  file_picker.dart  file_picker_wrapper.dart  general_dialog.dart  paths.dart  permission_manager.dart
shine/lib/pages/: home.dart  pages.dart
shine/lib/routes/: app_pages.dart  app_routes.dart
shine/lib/widgets/: forms.dart
shine/windows/: CMakeLists.txt
shine/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
shine/windows/runner/: Runner.rc  main.cpp
(+21 files in other folders)
